--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,11 +1,15 @@
 <!Doctype HtMl> <! --Dit is de derde pagina van mijn site-->
 <html> <dit is het html element-->
   <head>
+    <!-- De <title> van de pagina die verschijnt in het tabblad van de browser -->
     <title>het eerste begin</title>
+    <!-- Instellen van de karaktercodering voor de pagina -->
     <meta charset="utf-8">
+    <!-- Link naar het externe CSS-bestand voor de opmaak van de pagina -->
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <!-- Navigatie menu -->
        <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="info.html"> over mij</a></li>
@@ -14,14 +18,17 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
+<!-- Inleiding tot kleurmodellen -->
 <h2>Inleiding tot Kleurmodellen</h2>
 <p>Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren op verschillende apparaten, zoals computerschermen, printers en camera's. Twee veelgebruikte kleurmodellen zijn RGB en CMY-K. Deze modellen spelen een cruciale rol in digitale beeldbewerking en drukwerk.</p>
+<!-- Informatie over het RGB kleurmodel -->
 <h2>Het RGB Kleurmodel</h2>
 <p>
 Het RGB kleurmodel staat voor Rood, Groen en Blauw. Dit model wordt voornamelijk gebruikt in digitale schermen, zoals monitors, televisies en smartphones. RGB is een additief kleurmodel, wat betekent dat kleuren worden gecreëerd door licht toe te voegen.
 Rood (R), Groen (G) en Blauw (B) zijn de primaire kleuren.
 Door deze kleuren in verschillende intensiteiten te combineren, kunnen miljoenen verschillende kleuren worden geproduceerd.
 Als alle drie de kleuren op hun maximale intensiteit worden ingesteld, krijg je wit licht.</p>
+<!-- Voorbeelden van kleuren in het RGB model -->
 <h3>Voorbeeld van RGB:</h3>
 <p>
 (255, 0, 0) is puur rood.
@@ -29,12 +36,14 @@ Als alle drie de kleuren op hun maximale intensiteit worden ingesteld, krijg je 
 (0, 0, 255) is puur blauw.
 (255, 255, 255) is wit.
 </p>
+<!-- Informatie over het CMY-K kleurmodel -->
 <h2>Het CMY-K Kleurmodel</h2>
 <p>
 Het CMY-K kleurmodel staat voor Cyaan, Magenta, Geel (Yellow) en Zwart (Key). Dit model wordt voornamelijk gebruikt in drukwerk. CMY-K is een subtractief kleurmodel, wat betekent dat kleuren worden gecreëerd door licht te verwijderen of te absorberen.
 Cyaan (C), Magenta (M) en Geel (Y) zijn de primaire kleuren in dit model.
 Zwart (K) wordt toegevoegd om diepere zwarttinten te bereiken en inkt te besparen.
 Door deze kleuren in verschillende hoeveelheden te mengen, kunnen verschillende kleuren worden gecreëerd.</p>
+<!-- Voorbeelden van kleuren in het CMY-K model -->
 <h3>Voorbeeld van CMY-K:</h3>
 <p>
 (0, 100, 100, 0) is puur rood.
@@ -42,6 +51,7 @@ Door deze kleuren in verschillende hoeveelheden te mengen, kunnen verschillende 
 (100, 100, 0, 0) is puur blauw.
 (0, 0, 0, 100) is zwart.
 </p>
+<!-- Informatie over pixels en resolutie -->
 <h2>Pixels en Resolutie</h2>
 <p>
 Om kleuren op digitale schermen weer te geven, worden pixels gebruikt. Een pixel is de kleinste eenheid van een digitaal beeld en kan een specifieke kleur weergeven.
@@ -49,6 +59,7 @@ Pixels: Elke pixel op een scherm heeft een kleurwaarde die wordt bepaald door he
 Resolutie: Resolutie verwijst naar het aantal pixels op een scherm. Het wordt meestal uitgedrukt als het aantal horizontale pixels bij het aantal verticale pixels (bijvoorbeeld 1920x1080).
 Een hogere resolutie betekent meer pixels en dus meer detail en scherpte in het beeld.
 </p>
+<!-- Voorbeelden van resoluties -->
 <h3>Voorbeeld van Resoluties:</h3>
 <p>
 720p: 1280x720 pixels
