--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -75,7 +75,7 @@ Voorbeeld: Logo's, iconen en technische tekeningen.
 </h3>
 <!-- Voorbeelden van compressiealgoritmen -->
 <p>ZIP: Een veelgebruikte lossless compressiemethode voor bestanden.
-</p>J
-<p>PEG: Een lossy compressiemethode voor afbeeldingen, waarbij minder belangrijke gegevens worden verwijderd om de bestandsgrootte te verkleinen.
+</p>
+<p>JPEG: Een lossy compressiemethode voor afbeeldingen, waarbij minder belangrijke gegevens worden verwijderd om de bestandsgrootte te verkleinen.
 </p>
   </body>
